<resources>
    <string name="app_name">Cocktail Maker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="pompes_button">Pompes</string>
    <string name="boissons_button">Boissons</string>
    <string name="cocktail_button">Cocktail</string>
    <string name="verser_button">Verser</string>
    <string name="menu_label">Menu</string>
    <string name="pompes_label">Pompes</string>
    <string name="boissons_label">Boissons</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu">Menu</string>
    <string name="menthe_button">Menthe</string>
    <string name="grenadine_button">Grenadine</string>
    <string name="hey_there_nwhat_do_you_want_to_do">Hey there !\nWhat do you want to do ?</string>
</resources>