<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/pompes_menu_button"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/pompes_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <Button
        android:id="@+id/boissons_menu_button"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/boissons_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pompes_menu_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cocktail_menu_button"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/cocktail_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boissons_menu_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/verser_menu_button"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/verser_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktail_menu_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verser_menu_button"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/menu_menu_textview"
        android:layout_width="275dp"
        android:layout_height="20dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/menu_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_apptitle_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/menu_apptitle_textview"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:radius="3dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />
</androidx.constraintlayout.widget.ConstraintLayout>